report and fix. [David]

=item *

The virtual FTP server now assumes that template files uploaded to it are
encoded in the user's preferred encoding. So if you have Windows gremlins in
your templates, you can set your Character Set preference to "CP1252" and it
will just work. Thanks to Phillip Smith for the report (Bug #124). [David]

=back

=head2 Bug Fixes

=over

=item *

Cover dates are no longer exported with the wrong year (2009) when their dates
are in the first three days of 2010. Thanks to Paul Orrock for the spot (Bug
#122) and David Oliveira via Bret Dawson for the fix! [David]

=item *

Fixed an error in L<Bric::Biz::Contact> where a boolean value was not passed
to the database as a boolean. [David Oliveira]

=back

=head1 Version 1.11.2 (2009-11-14)

=head2 New Features

=over

=item *

Added configuration directive to allow the expiration of assets when they are
deleted. [David, Mercier, Rolf and Herring]

=item *

Added the C<publishing()>, C<previewing()>, and C<compiling()> sugar methods
to L<Bric::Util::Burner|Bric::Util::Burner> because I'm sick of seeing the
same code to check modes in templates all the time. [David]

=item *

Take keyword permissions into account when accessing or creating keywords from
the story and media profiles as well as category manager. [Adrian Yee]

=item *

Added support for copying and pasting elements in the story profile.
[Adrian Yee]

=item *

Added the C<find_or_create_alternate()> method to
L<Bric::Biz::Asset::Business::Media|Bric::Biz::Asset::Business::Media> class.
This method makes it easy for templates to create alternate representations of
an image as a new media document. Useful for generating thumbnails and the 
like. As a side-effect, L<Imager|Imager> is now a required module. [David]

=item *

Since L<Imager|Imager> is now a required module, the C<USE_THUMBNAILS>
directive is now enabled by default as well. [David]

=item *

Added the following aliases, so I can pretend that the versions with double